--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/syntax.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
-	<script defer src="assets/js/fontawesome-all.js"></script>
 	<script src="assets/js/convert.js"></script>
 
 	<div class="master-content center-block">
