--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
 <ul class="master-ul">
 	<li class="nav-title">Mariage</li>
 	<li class="nav-domain"><code class="highlighter-rouge">12 octobre 2019</code></li>
-	<li class="li-status"><a href="http://bit.ly/medsemarie"><span class="nav-status">Inscription</span></a></li>  <!-- Add the API status link -->
+	<li class="li-status"><a href="http://bit.ly/medsemarie"><span class="nav-status">Cliquez ici pour répondre</span></a></li>  <!-- Add the API status link -->
 	
 	{% assign sorted = site.documentation | sort: 'order' %}
 	{% for node in sorted %}
