--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,7 +3,7 @@ $light-gray: #F0F0F0;
 $soft-gray: #D9D9D9;
 $h1-color: #404040;
 $text-color: #404040;
-$bullet-color: #005291;
+$bullet-color: #4b7ff7;
 $block-quote-bg: #FFFEBA;
 $block-quote-color: #7C7C7C;
 
@@ -167,7 +167,7 @@ a {
     	}
     }
     .nav-status {
-    	background-color: #A1FFB6;
+    	background-color: #de2d26;
     	padding: 4px 8px 4px 8px;
     	border-radius: 4px;
     	font-size:12px;
@@ -180,7 +180,7 @@ a {
 
     	a {
     		text-decoration: none;
-    		color: $text-color;
+    		color: white;
     	}
     }
     .li-main {
