--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,4 +1,4 @@
-$font-size-minimum: 15px;
+$font-size-minimum: 18px;
 $light-gray: #F0F0F0;
 $soft-gray: #D9D9D9;
 $h1-color: #404040;
@@ -16,6 +16,25 @@ a {
 	color: gray;
 }
 
+.program-div {
+	background-color: #eff3ff;
+	padding: 20px;
+	table {
+		border: 3px solid white;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	th {
+		vertical-align: top !important;
+		padding-top: 8px;
+		text-align: right;
+		padding-right: 16px;
+	}
+	td {
+		vertical-align: top;
+	}
+
+}
 .shadow-image {
 	// box-shadow: 0px 0px 10px grey;
 	// border-radius: 40px;
@@ -34,11 +53,10 @@ a {
 		box-shadow: none;
 	}
 
-
 	table {
 		tbody {
 			td {
-				border: 1px solid $light-gray;
+				// border: 0px solid $light-gray;
 				padding: 8px 8px 8px 8px;
 			}
 		}
@@ -67,13 +85,20 @@ a {
 	}
 	
 	h2 {
-		margin-top: 40px;
+		margin-top: 0px;
+		padding-top: -20px;
 		font-size: 24px;
 		color: $bullet-color;
 	}
+	.fa {
+		font-size: 26px;
+		margin-top: 40px;
+		margin-bottom: 8px;
+		padding-bottom: 0px;
+	}
 	h3 {
 		margin-top: 30px;
-		margin-bottom: 10px;
+		margin-bottom: 10px !important;
 		padding-bottom: 0px;
 		font-size: $font-size-minimum;
 	}
@@ -129,7 +154,7 @@ a {
 			padding-bottom: 10px;
 		}
 		p{
-			font-size: 13px;
+			font-size: $font-size-minimum;
 		}
 		a {
 			color: gray;
@@ -157,11 +182,11 @@ a {
 	.nav-title {
     	color: $text-color;
 		font-weight: bold;
-		font-size: 18px;
+		font-size: 100%;
     }
     .nav-domain {
     	code {
-    		font-size: 14px;
+    		font-size: 100%;
     		color: $text-color;
     		background-color: white;
     	}
@@ -170,7 +195,7 @@ a {
     	background-color: #de2d26;
     	padding: 4px 8px 4px 8px;
     	border-radius: 4px;
-    	font-size:12px;
+    	font-size: 100%;
     	font-weight: bold;
     }
 
@@ -197,12 +222,12 @@ a {
 	}
 
 	.sub-nav {
-		font-size: 14px;
+		font-size: 100%;
 		color: gray;
 	}
 
 	.sub-ul {
-		margin-left: -20px;
+		margin-left: -40px;
 	}
 
 
