--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,13 +4,15 @@
 <ul class="master-ul">
 	<li class="nav-title">Mariage</li>
 	<li class="nav-domain"><code class="highlighter-rouge">12 octobre 2019</code></li>
-	<li class="li-status"><a href="http://bit.ly/medsemarie"><span class="nav-status">Cliquez ici pour répondre</span></a></li>  <!-- Add the API status link -->
+	
 	
 	{% assign sorted = site.documentation | sort: 'order' %}
 	{% for node in sorted %}
 		{% if node.front == true %}
-			<li class="li-main"><a class="main-nav" id="{{node.title}}"> {{node.title}} </a></li>
+			<!-- <li class="li-main"><a class="main-nav" id="{{node.title}}"> {{node.title}} </a></li> -->
+			
 			<script type="text/javascript">title2anchor("{{node.title}}")</script>
+			<br>
 			<ul class="sub-ul">
 			{% for subpage in site.documentation %}
 				{% if subpage.front == false and subpage.permalink contains node.permalink %}
